[gd_scene load_steps=16 format=2]

[ext_resource path="res://Sprites/menu.png" type="Texture" id=1]
[ext_resource path="res://Scenes/GUI/Fonts/PfefferMediaeval.tres" type="DynamicFont" id=2]
[ext_resource path="res://Sprites/exitbutton-sm.png" type="Texture" id=3]
[ext_resource path="res://Sprites/soundbutton-sm.png" type="Texture" id=4]
[ext_resource path="res://Sprites/button_sm.png" type="Texture" id=5]
[ext_resource path="res://Sprites/viking.png" type="Texture" id=6]
[ext_resource path="res://Scripts/UILogic.gd" type="Script" id=7]
[ext_resource path="res://PfefferMediaeval.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Sprites/infoboard.png" type="Texture" id=9]
[ext_resource path="res://BLKCHCRY.TTF" type="DynamicFontData" id=10]

[sub_resource type="DynamicFont" id=2]
size = 60
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 8 )

[sub_resource type="Theme" id=3]
default_font = SubResource( 2 )

[sub_resource type="Theme" id=1]
default_font = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 18
use_filter = true
font_data = ExtResource( 10 )

[sub_resource type="Theme" id=5]
default_font = SubResource( 4 )

[node name="UI" type="Control"]
margin_right = 320.0
margin_bottom = 640.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundLayers" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menu" type="Sprite" parent="BackgroundLayers"]
visible = false
texture = ExtResource( 1 )
centered = false

[node name="MainMenu" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -145.0
margin_top = 30.0
margin_right = 145.0
margin_bottom = 640.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="MainMenu"]
margin_right = 290.0
margin_bottom = 200.0
size_flags_vertical = 3
theme = SubResource( 3 )
text = "Hnefatafl"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="VBoxContainer" parent="MainMenu"]
margin_left = 55.0
margin_top = 204.0
margin_right = 235.0
margin_bottom = 404.0
size_flags_horizontal = 4
size_flags_vertical = 3
alignment = 1

[node name="Continue" type="TextureButton" parent="MainMenu/Buttons"]
visible = false
margin_top = 68.0
margin_right = 180.0
margin_bottom = 128.0
rect_min_size = Vector2( 120, 40 )
texture_normal = ExtResource( 5 )

[node name="Label3" type="Label" parent="MainMenu/Buttons/Continue"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 120, 40 )
size_flags_horizontal = 3
size_flags_vertical = 1
theme = SubResource( 1 )
text = "Continue"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGame" type="TextureButton" parent="MainMenu/Buttons"]
margin_top = 38.0
margin_right = 180.0
margin_bottom = 98.0
rect_min_size = Vector2( 120, 40 )
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MainMenu/Buttons/NewGame"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 120, 40 )
size_flags_horizontal = 3
size_flags_vertical = 1
theme = SubResource( 1 )
text = "New Game"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="Options" type="TextureButton" parent="MainMenu/Buttons"]
margin_top = 102.0
margin_right = 180.0
margin_bottom = 162.0
rect_min_size = Vector2( 120, 40 )
texture_normal = ExtResource( 5 )

[node name="Label2" type="Label" parent="MainMenu/Buttons/Options"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 120, 40 )
size_flags_horizontal = 3
size_flags_vertical = 1
theme = SubResource( 1 )
text = "Options"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu"]
margin_top = 408.0
margin_right = 290.0
margin_bottom = 610.0
size_flags_vertical = 3

[node name="viking" type="Sprite" parent="MainMenu/VBoxContainer"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 6 )
centered = false

[node name="GameInterface" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfoBox" type="TextureRect" parent="GameInterface"]
visible = false
margin_right = 232.0
margin_bottom = 75.0
size_flags_horizontal = 3
size_flags_vertical = 0
texture = ExtResource( 9 )

[node name="Turn" type="Label" parent="GameInterface/InfoBox"]
margin_left = 3.0
margin_top = 3.0
margin_right = 110.0
margin_bottom = 37.0
theme = SubResource( 5 )
text = "Current turn:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurrentPlayer" type="Label" parent="GameInterface/InfoBox"]
margin_left = 3.0
margin_top = 39.0
margin_right = 110.0
margin_bottom = 73.0
theme = SubResource( 5 )
text = "PLAYER"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mute" type="TextureButton" parent="GameInterface"]
margin_left = 280.0
margin_right = 320.0
margin_bottom = 40.0
size_flags_vertical = 0
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="TextureButton" parent="GameInterface"]
visible = false
margin_left = 280.0
margin_right = 320.0
margin_bottom = 40.0
size_flags_vertical = 0
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_down" from="MainMenu/Buttons/Continue" to="." method="_on_Continue_button_down"]
[connection signal="button_down" from="MainMenu/Buttons/NewGame" to="." method="_on_NewGame_button_down"]
[connection signal="button_down" from="GameInterface/Mute" to="." method="_on_Mute_button_down"]
[connection signal="button_down" from="GameInterface/Exit" to="." method="_on_Exit_button_down"]
